Adhesión info legal en footer

--- a/index.html
+++ b/index.html
@@ -303,15 +303,16 @@
   <footer class="border-t border-slate-100">
     <div
       class="mx-auto max-w-7xl px-6 py-10 text-sm text-slate-500 flex flex-col md:flex-row items-center justify-between gap-4">
-      <p>© <span id="year"></span> Milo Bots. Todos los derechos reservados.</p>
+      <p>© <span id="year"></span> Milo Bots. Todos los derechos reservados.<br>
+        Responsable legal: Vasquez María Dolores – CUIT 27-31846983-6</p>
       <div class="flex items-center gap-6">
         <a id="email-link" href="mailto:abregurobertoa@gmail.com"
           class="hover:text-slate-700">abregurobertoa@gmail.com</a>
         <a id="whatsapp-footer" href="#" class="hover:text-slate-700">WhatsApp</a>
-        <a href="#" class="hover:text-slate-700">Política de privacidad</a>
       </div>
     </div>
   </footer>
+
 
   <!-- FAB WhatsApp -->
   <a id="whatsapp-fab" href="#"
