agregado de íconos

--- a/index.html
+++ b/index.html
@@ -139,24 +139,41 @@
     <div class="mx-auto max-w-7xl px-6 py-20">
       <h2 class="text-3xl font-extrabold tracking-tight text-center">Cómo funciona</h2>
       <div class="mt-10 grid gap-6 md:grid-cols-3">
+
+        <!-- Paso 1 -->
         <div class="rounded-2xl bg-white p-6 border border-slate-200 shadow-sm">
-          <div class="h-10 w-10 rounded-full bg-gradient-to-br from-sky-400 to-indigo-400"></div>
+          <div
+            class="h-10 w-10 rounded-full bg-gradient-to-br from-sky-400 to-indigo-400 flex items-center justify-center">
+            <img src="logo-128.png" alt="Milo Bots avatar" class="h-6 w-6 rounded-full">
+          </div>
           <h3 class="mt-4 font-bold text-lg">1) Entendemos tu negocio</h3>
           <p class="mt-2 text-slate-700">Definimos juntos qué consultas responder y el tono de voz.</p>
         </div>
+
+        <!-- Paso 2 -->
         <div class="rounded-2xl bg-white p-6 border border-slate-200 shadow-sm">
-          <div class="h-10 w-10 rounded-full bg-gradient-to-br from-sky-400 to-indigo-400"></div>
+          <div
+            class="h-10 w-10 rounded-full bg-gradient-to-br from-sky-400 to-indigo-400 flex items-center justify-center">
+            <img src="logo-128.png" alt="Milo Bots avatar" class="h-6 w-6 rounded-full">
+          </div>
           <h3 class="mt-4 font-bold text-lg">2) Configuramos tu bot</h3>
           <p class="mt-2 text-slate-700">Entrenado con tu web/PDF, integraciones y flujos clave.</p>
         </div>
+
+        <!-- Paso 3 -->
         <div class="rounded-2xl bg-white p-6 border border-slate-200 shadow-sm">
-          <div class="h-10 w-10 rounded-full bg-gradient-to-br from-sky-400 to-indigo-400"></div>
+          <div
+            class="h-10 w-10 rounded-full bg-gradient-to-br from-sky-400 to-indigo-400 flex items-center justify-center">
+            <img src="logo-128.png" alt="Milo Bots avatar" class="h-6 w-6 rounded-full">
+          </div>
           <h3 class="mt-4 font-bold text-lg">3) Listo en días</h3>
           <p class="mt-2 text-slate-700">Respuestas al instante 24/7 y derivación a humano.</p>
         </div>
+
       </div>
     </div>
   </section>
+
 
   <!-- SERVICIOS -->
   <section id="servicios" class="mx-auto max-w-7xl px-6 py-20">
@@ -182,7 +199,7 @@
     <div class="mx-auto max-w-7xl px-6 py-20">
       <div class="grid gap-10 md:grid-cols-2 items-center">
         <div>
-          <h2 class="text-3xl font-extrabold tracking-tight">Ejemplo real - 🍔 Restaurante 🍔</h2>
+          <h2 class="text-3xl font-extrabold tracking-tight">Ejemplo real 🍔 Restaurante 🍔</h2>
           <p class="mt-4 text-lg text-slate-700">Chatbot generativo <strong>entrenado con IA</strong> para responder
             consultas relacionadas a un restaurante.
           </p>
