--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 
     gtag('config', 'AW-17518516174');
   </script>
+
+  <!-- Event snippet for Vista de una página conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-17518516174/_n3NCPrSjZEbEM6vvaFB',
+      'value': 1.0,
+      'currency': 'ARS'
+    });
+  </script>
 </head>
 
 <body class="min-h-screen bg-white text-slate-900">
@@ -356,9 +365,8 @@
 
   <script>
     // CONFIG — cambiá esto por tu número de WhatsApp y email
-    const WHATSAPP_LINK = 'https://wa.me/5491164421355?text=Hola%20Milo%20Bots!%20Quiero%20un%20demo';
-    const WHATSAPP_LINK_AVANZADO = 'https://wa.me/5491164421355?text=Hola%20Milo%20Bots!%20Quiero%20solicitar%20una%20cotización';
-    const EMAIL = 'abregurobertoa@gmail.com'; // <-- opcional
+    const WHATSAPP_LINK = 'https://wa.me/541164421355?text=Hola%20Milo%20Bots!%20Quiero%20un%20demo';
+    const WHATSAPP_LINK_AVANZADO = 'https://wa.me/541164421355?text=Hola%20Milo%20Bots!%20Quiero%20solicitar%20una%20cotización';
 
     document.getElementById('whatsapp-nav').href = WHATSAPP_LINK;
     document.getElementById('whatsapp-hero').href = WHATSAPP_LINK;
