--- a/index.html
+++ b/index.html
@@ -19,21 +19,28 @@
   </style>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518516174"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CH5849NQHG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag () { dataLayer.push(arguments); }
     gtag('js', new Date());
 
+    // GA4
+    gtag('config', 'G-CH5849NQHG');
+
+    // Google Ads
     gtag('config', 'AW-17518516174');
   </script>
 
-  <!-- Event snippet for Vista de una página conversion page -->
+  <!-- Conversión por vista de página (Google Ads) -->
   <script>
-    gtag('event', 'conversion', {
-      'send_to': 'AW-17518516174/_n3NCPrSjZEbEM6vvaFB',
-      'value': 1.0,
-      'currency': 'ARS'
+    // Dispara la conversión apenas carga la página
+    window.addEventListener('load', function () {
+      gtag('event', 'conversion', {
+        'send_to': 'AW-17518516174/_n3NCPrSjZEbEM6vvaFB',
+        'value': 1.0,
+        'currency': 'ARS'
+      });
     });
   </script>
 </head>
