modificación de Google tag

--- a/index.html
+++ b/index.html
@@ -19,22 +19,21 @@
   </style>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CH5849NQHG"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HRL4XWJMV7"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag () { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     // GA4
-    gtag('config', 'G-CH5849NQHG');
+    gtag('config', 'G-HRL4XWJMV7');
 
-    // Google Ads
+    // Google Ads (opcional, si lo usás)
     gtag('config', 'AW-17518516174');
   </script>
 
-  <!-- Conversión por vista de página (Google Ads) -->
+  <!-- Conversión por vista de página (Ads) -->
   <script>
-    // Dispara la conversión apenas carga la página
     window.addEventListener('load', function () {
       gtag('event', 'conversion', {
         'send_to': 'AW-17518516174/_n3NCPrSjZEbEM6vvaFB',
@@ -43,6 +42,7 @@
       });
     });
   </script>
+
 </head>
 
 <body class="min-h-screen bg-white text-slate-900">
