modificación de Google tag v2

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     }
   </style>
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HRL4XWJMV7"></script>
+  <!-- Google tag (gtag.js) — usando el loader de Google Ads -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17518516174"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag () { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    // GA4
-    gtag('config', 'G-HRL4XWJMV7');
+    // GA4 (usa el ID que ves en tu flujo actual)
+    gtag('config', 'G-HRL4XWJMV7');   // ← si tu flujo es otro, cambialo por ese G-....
 
-    // Google Ads (opcional, si lo usás)
+    // Google Ads
     gtag('config', 'AW-17518516174');
   </script>
 
@@ -42,7 +42,6 @@
       });
     });
   </script>
-
 </head>
 
 <body class="min-h-screen bg-white text-slate-900">
